tests222/tests2/test238.out
lli: <stdin>:1:1: error: expected top-level entity
line 7: syntax error
^
